--- a/exercise-mern/exercises-react/package.json
+++ b/exercise-mern/exercises-react/package.json
@@ -24,5 +24,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "vite": "^5.2.0"
-  }
+  },
+  "main": "vite.config.js",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
